# Toxic-SocialNetwork

./: .env.example  .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yaml
src/toxic_network/: crew.py  main.py  types.py
src/toxic_network/config/: agents.yaml  tasks.yaml
src/toxic_network/tools/: build_personality.py
